resources/hubble/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hubble-gateway
  namespace: kube-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - hubble-dev.willyhu.tw
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - hubble-dev.willyhu.tw
      tls:
        credentialName: hubble-dev-willyhu-tw-tls
        mode: SIMPLE
